--- a/src/Resources/views/browser/_item.html.twig
+++ b/src/Resources/views/browser/_item.html.twig
@@ -1,4 +1,4 @@
-<a class="list-group-item clearfix{{ resource.path == selectedPath ? ' active' : '' }}" href="{{ path('cmf_column_browser', { path: resource.path }) }}">
+<a class="list-group-item clearfix{{ resource.path == selectedPath ? ' active' : '' }}" href="{{ path(route, { path: resource.path }) }}">
     <span class="glyphicon glyphicon-{{ resource.hasChildren ? 'folder-close' : 'file' }}"></span>
     {{ resource.name }}
 </a>
